Refactoring Whole Project Codes Using sonarqube, pmd, findbugs